# iisignature-tensorflow-2

./: README.md  pyproject.toml
example/: example.ipynb
iisignature_tensorflow_2/: __init__.py
