[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "iisignature_tensorflow_2" 
version = "0.1.0" 
description = "Tensorflow 2 implementation of the iisignature package."
authors = [ "Rémi Genet", "Hugo Inzirillo"]  
readme = "README.md"  
packages = [{include = "iisignature_tensorflow_2"}]  

[tool.poetry.dependencies]
python = ">=3.10,<4.0" 
numpy = ">=1.2,<2"
iisignature = ">=0.24"
tensorflow = ">=2.8,<3" 
